# organia-challenge

./: .gitignore  Dockerfile  README.md  docker-compose.yml  hello.py  main.py  pyproject.toml  requirements.txt
database/: __init__.py  database.py  models.py  seed.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: ReviewCard.vue
frontend/src/layouts/default/: AppBar.vue  AppFooter.vue  Default.vue
frontend/src/plugins/: index.ts  vuetify.ts
frontend/src/router/: index.ts
frontend/src/services/: reviews.ts
frontend/src/services/reviews/: index.ts  types.d.ts
frontend/src/views/: Home.vue  ListReviews.vue  SaveReview.vue
libs/: utils.py
routes/: reviews.py  test_reviews.py
schemas/: review.py
services/: review_classifier.py  test_review_classifier.py
